y.output
   0  $accept : program $end

   1  program : statement
   2          | statement program

   3  program_in_func : statement_in_func
   4                  | statement_in_func program_in_func

   5  program_in_case : statement_in_case
   6                  | statement_in_case program_in_case

   7  statement : declare
   8            | func_invocation ';'
   9            | simple_statement

  10  statement_in_func : declare_in_func
  11                    | simple_statement
  12                    | compound_statement
  13                    | if_else_statement
  14                    | switch_statement
  15                    | while_statement
  16                    | for_statement
  17                    | KEY_BREAK ';'
  18                    | KEY_CONTINUE ';'
  19                    | return_statement
  20                    | expr ';'

  21  statement_in_case : simple_statement
  22                    | compound_statement
  23                    | if_else_statement
  24                    | switch_statement
  25                    | while_statement
  26                    | for_statement
  27                    | KEY_BREAK ';'
  28                    | KEY_CONTINUE ';'
  29                    | return_statement
  30                    | expr ';'

  31  declare : type declare_ID ';'
  32          | KEY_CONST type declare_const ';'
  33          | type declare_function
  34          | type_void declare_function

  35  declare_in_func : type declare_ID ';'
  36                  | KEY_CONST type declare_const ';'

  37  declare_ID : scalar
  38             | array
  39             | scalar ',' declare_ID
  40             | array ',' declare_ID

  41  declare_const : ID '=' expr
  42                | ID '=' expr ',' declare_const

  43  declare_function : ID '(' ')' ';'
  44                   | ID '(' paras ')' ';'
  45                   | ID '(' ')' '{' '}'
  46                   | ID '(' paras ')' '{' '}'
  47                   | ID '(' ')' '{' program_in_func '}'
  48                   | ID '(' paras ')' '{' program_in_func '}'

  49  type : TYPE_INT
  50       | TYPE_DOUBLE
  51       | TYPE_CHAR
  52       | TYPE_BOOL

  53  type_void : TYPE_VOID

  54  scalar : scalar_id
  55         | scalar_id '=' expr

  56  scalar_id : ID

  57  array : ID arr_state_index
  58        | ID arr_state_index '=' '{' arr_content '}'
  59        | ID arr_state_index '=' '{' '}'

  60  arr_state_index : '[' INT ']'
  61                  | '[' INT ']' arr_state_index

  62  arr_content : exprs

  63  paras : para
  64        | para ',' paras

  65  para : type ID
  66       | type ID arr_state_index

  67  var : ID
  68      | ID arr_expr_index

  69  simple_statement : var '=' expr ';'

  70  compound_statement : '{' program_in_func '}'
  71                     | '{' '}'

  72  if_else_statement : KEY_IF '(' expr ')' '{' program_in_func '}' KEY_ELSE '{' program_in_func '}'
  73                    | KEY_IF '(' expr ')' '{' '}' KEY_ELSE '{' program_in_func '}'
  74                    | KEY_IF '(' expr ')' '{' program_in_func '}' KEY_ELSE '{' '}'
  75                    | KEY_IF '(' expr ')' '{' '}' KEY_ELSE '{' '}'
  76                    | KEY_IF '(' expr ')' '{' program_in_func '}'
  77                    | KEY_IF '(' expr ')' '{' '}'

  78  switch_statement : KEY_SWTICH '(' ID ')' '{' case_statements '}'
  79                   | KEY_SWTICH '(' ID ')' '{' case_statements default_statement '}'
  80                   | KEY_SWTICH '(' ID ')' '{' program_in_func case_statements '}'
  81                   | KEY_SWTICH '(' ID ')' '{' program_in_func case_statements default_statement '}'

  82  case_const : INT
  83             | CHAR

  84  case_statements : KEY_CASE case_const ':' program_in_case
  85                  | KEY_CASE case_const ':' program_in_case case_statements
  86                  | KEY_CASE case_const ':'
  87                  | KEY_CASE case_const ':' case_statements

  88  default_statement : KEY_DEFAULT ':' program_in_case
  89                    | KEY_DEFAULT ':'

  90  while_statement : KEY_WHILE '(' expr ')' '{' program_in_func '}'
  91                  | KEY_WHILE '(' expr ')' '{' '}'
  92                  | KEY_DO '{' program_in_func '}' KEY_WHILE '(' expr ')' ';'
  93                  | KEY_DO '{' '}' KEY_WHILE '(' expr ')' ';'

  94  for_statement : KEY_FOR '(' for_paras ';' expr ';' for_paras ')' '{' program_in_func '}'
  95                | KEY_FOR '(' for_paras ';' expr ';' for_paras ')' '{' '}'
  96                | KEY_FOR '(' for_paras ';' ';' for_paras ')' '{' program_in_func '}'
  97                | KEY_FOR '(' for_paras ';' ';' for_paras ')' '{' '}'
  98                | KEY_FOR '(' for_paras ';' expr ';' ')' '{' program_in_func '}'
  99                | KEY_FOR '(' for_paras ';' expr ';' ')' '{' '}'
 100                | KEY_FOR '(' for_paras ';' ';' ')' '{' program_in_func '}'
 101                | KEY_FOR '(' for_paras ';' ';' ')' '{' '}'
 102                | KEY_FOR '(' ';' expr ';' for_paras ')' '{' program_in_func '}'
 103                | KEY_FOR '(' ';' expr ';' for_paras ')' '{' '}'
 104                | KEY_FOR '(' ';' ';' for_paras ')' '{' program_in_func '}'
 105                | KEY_FOR '(' ';' ';' for_paras ')' '{' '}'
 106                | KEY_FOR '(' ';' expr ';' ')' '{' program_in_func '}'
 107                | KEY_FOR '(' ';' expr ';' ')' '{' '}'
 108                | KEY_FOR '(' ';' ';' ')' '{' program_in_func '}'
 109                | KEY_FOR '(' ';' ';' ')' '{' '}'

 110  for_paras : expr
 111            | var '=' expr
 112            | expr ',' for_paras
 113            | var '=' expr ',' for_paras

 114  return_statement : KEY_RETURN expr ';'

 115  exprs : expr
 116        | expr ',' exprs

 117  expr : var
 118       | ID OPER_PP
 119       | ID OPER_SS
 120       | '-' expr
 121       | expr '*' expr
 122       | expr '/' expr
 123       | expr '%' expr
 124       | expr '+' expr
 125       | expr '-' expr
 126       | expr OPER_CMP expr
 127       | '!' expr
 128       | expr OPER_AA expr
 129       | expr OPER_OO expr
 130       | '(' expr ')'
 131       | val
 132       | ID '(' ')'
 133       | ID '(' exprs ')'

 134  val : SCI
 135      | INT
 136      | DOUBLE
 137      | CHAR
 138      | STR
 139      | KEY_NULL
 140      | KEY_TRUE
 141      | KEY_FALSE

 142  arr_expr_index : '[' expr ']'
 143                 | '[' expr ']' arr_expr_index

 144  func_invocation : ID '(' ')'
 145                  | ID '(' exprs ')'

state 0
	$accept : . program $end  (0)

	KEY_CONST  shift 1
	TYPE_INT  shift 2
	TYPE_DOUBLE  shift 3
	TYPE_CHAR  shift 4
	TYPE_BOOL  shift 5
	TYPE_VOID  shift 6
	ID  shift 7
	.  error

	program  goto 8
	var  goto 9
	statement  goto 10
	declare  goto 11
	func_invocation  goto 12
	simple_statement  goto 13
	type  goto 14
	type_void  goto 15


state 1
	declare : KEY_CONST . type declare_const ';'  (32)

	TYPE_INT  shift 2
	TYPE_DOUBLE  shift 3
	TYPE_CHAR  shift 4
	TYPE_BOOL  shift 5
	.  error

	type  goto 16


state 2
	type : TYPE_INT .  (49)

	.  reduce 49


state 3
	type : TYPE_DOUBLE .  (50)

	.  reduce 50


state 4
	type : TYPE_CHAR .  (51)

	.  reduce 51


state 5
	type : TYPE_BOOL .  (52)

	.  reduce 52


state 6
	type_void : TYPE_VOID .  (53)

	.  reduce 53


state 7
	var : ID .  (67)
	var : ID . arr_expr_index  (68)
	func_invocation : ID . '(' ')'  (144)
	func_invocation : ID . '(' exprs ')'  (145)

	'['  shift 17
	'('  shift 18
	'='  reduce 67

	arr_expr_index  goto 19


state 8
	$accept : program . $end  (0)

	$end  accept


state 9
	simple_statement : var . '=' expr ';'  (69)

	'='  shift 20
	.  error


state 10
	program : statement .  (1)
	program : statement . program  (2)

	KEY_CONST  shift 1
	TYPE_INT  shift 2
	TYPE_DOUBLE  shift 3
	TYPE_CHAR  shift 4
	TYPE_BOOL  shift 5
	TYPE_VOID  shift 6
	ID  shift 7
	$end  reduce 1

	program  goto 21
	var  goto 9
	statement  goto 10
	declare  goto 11
	func_invocation  goto 12
	simple_statement  goto 13
	type  goto 14
	type_void  goto 15


state 11
	statement : declare .  (7)

	.  reduce 7


state 12
	statement : func_invocation . ';'  (8)

	';'  shift 22
	.  error


state 13
	statement : simple_statement .  (9)

	.  reduce 9


state 14
	declare : type . declare_ID ';'  (31)
	declare : type . declare_function  (33)

	ID  shift 23
	.  error

	scalar_id  goto 24
	declare_ID  goto 25
	declare_function  goto 26
	scalar  goto 27
	array  goto 28


state 15
	declare : type_void . declare_function  (34)

	ID  shift 29
	.  error

	declare_function  goto 30


state 16
	declare : KEY_CONST type . declare_const ';'  (32)

	ID  shift 31
	.  error

	declare_const  goto 32


state 17
	arr_expr_index : '[' . expr ']'  (142)
	arr_expr_index : '[' . expr ']' arr_expr_index  (143)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 46
	val  goto 47


state 18
	func_invocation : ID '(' . ')'  (144)
	func_invocation : ID '(' . exprs ')'  (145)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	')'  shift 48
	.  error

	var  goto 45
	expr  goto 49
	exprs  goto 50
	val  goto 47


state 19
	var : ID arr_expr_index .  (68)

	.  reduce 68


state 20
	simple_statement : var '=' . expr ';'  (69)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 51
	val  goto 47


state 21
	program : statement program .  (2)

	.  reduce 2


state 22
	statement : func_invocation ';' .  (8)

	.  reduce 8


state 23
	declare_function : ID . '(' ')' ';'  (43)
	declare_function : ID . '(' paras ')' ';'  (44)
	declare_function : ID . '(' ')' '{' '}'  (45)
	declare_function : ID . '(' paras ')' '{' '}'  (46)
	declare_function : ID . '(' ')' '{' program_in_func '}'  (47)
	declare_function : ID . '(' paras ')' '{' program_in_func '}'  (48)
	scalar_id : ID .  (56)
	array : ID . arr_state_index  (57)
	array : ID . arr_state_index '=' '{' arr_content '}'  (58)
	array : ID . arr_state_index '=' '{' '}'  (59)

	'['  shift 52
	'('  shift 53
	';'  reduce 56
	','  reduce 56
	'='  reduce 56

	arr_state_index  goto 54


state 24
	scalar : scalar_id .  (54)
	scalar : scalar_id . '=' expr  (55)

	'='  shift 55
	';'  reduce 54
	','  reduce 54


state 25
	declare : type declare_ID . ';'  (31)

	';'  shift 56
	.  error


state 26
	declare : type declare_function .  (33)

	.  reduce 33


state 27
	declare_ID : scalar .  (37)
	declare_ID : scalar . ',' declare_ID  (39)

	','  shift 57
	';'  reduce 37


state 28
	declare_ID : array .  (38)
	declare_ID : array . ',' declare_ID  (40)

	','  shift 58
	';'  reduce 38


state 29
	declare_function : ID . '(' ')' ';'  (43)
	declare_function : ID . '(' paras ')' ';'  (44)
	declare_function : ID . '(' ')' '{' '}'  (45)
	declare_function : ID . '(' paras ')' '{' '}'  (46)
	declare_function : ID . '(' ')' '{' program_in_func '}'  (47)
	declare_function : ID . '(' paras ')' '{' program_in_func '}'  (48)

	'('  shift 53
	.  error


state 30
	declare : type_void declare_function .  (34)

	.  reduce 34


state 31
	declare_const : ID . '=' expr  (41)
	declare_const : ID . '=' expr ',' declare_const  (42)

	'='  shift 59
	.  error


state 32
	declare : KEY_CONST type declare_const . ';'  (32)

	';'  shift 60
	.  error


state 33
	val : KEY_NULL .  (139)

	.  reduce 139


state 34
	val : KEY_TRUE .  (140)

	.  reduce 140


state 35
	val : KEY_FALSE .  (141)

	.  reduce 141


state 36
	val : SCI .  (134)

	.  reduce 134


state 37
	val : DOUBLE .  (136)

	.  reduce 136


state 38
	val : CHAR .  (137)

	.  reduce 137


state 39
	val : STR .  (138)

	.  reduce 138


state 40
	val : INT .  (135)

	.  reduce 135


state 41
	var : ID .  (67)
	var : ID . arr_expr_index  (68)
	expr : ID . OPER_PP  (118)
	expr : ID . OPER_SS  (119)
	expr : ID . '(' ')'  (132)
	expr : ID . '(' exprs ')'  (133)

	OPER_PP  shift 61
	OPER_SS  shift 62
	'['  shift 17
	'('  shift 63
	OPER_AA  reduce 67
	OPER_OO  reduce 67
	OPER_CMP  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	']'  reduce 67
	';'  reduce 67
	','  reduce 67
	'='  reduce 67
	')'  reduce 67
	'}'  reduce 67

	arr_expr_index  goto 19


state 42
	expr : '!' . expr  (127)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 64
	val  goto 47


state 43
	expr : '-' . expr  (120)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 65
	val  goto 47


state 44
	expr : '(' . expr ')'  (130)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 66
	val  goto 47


state 45
	expr : var .  (117)

	.  reduce 117


state 46
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)
	arr_expr_index : '[' expr . ']'  (142)
	arr_expr_index : '[' expr . ']' arr_expr_index  (143)

	OPER_AA  shift 67
	OPER_OO  shift 68
	OPER_CMP  shift 69
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	']'  shift 75
	.  error


state 47
	expr : val .  (131)

	.  reduce 131


state 48
	func_invocation : ID '(' ')' .  (144)

	.  reduce 144


state 49
	exprs : expr .  (115)
	exprs : expr . ',' exprs  (116)
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)

	OPER_AA  shift 67
	OPER_OO  shift 68
	OPER_CMP  shift 69
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	','  shift 76
	')'  reduce 115
	'}'  reduce 115


state 50
	func_invocation : ID '(' exprs . ')'  (145)

	')'  shift 77
	.  error


state 51
	simple_statement : var '=' expr . ';'  (69)
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)

	OPER_AA  shift 67
	OPER_OO  shift 68
	OPER_CMP  shift 69
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	';'  shift 78
	.  error


state 52
	arr_state_index : '[' . INT ']'  (60)
	arr_state_index : '[' . INT ']' arr_state_index  (61)

	INT  shift 79
	.  error


state 53
	declare_function : ID '(' . ')' ';'  (43)
	declare_function : ID '(' . paras ')' ';'  (44)
	declare_function : ID '(' . ')' '{' '}'  (45)
	declare_function : ID '(' . paras ')' '{' '}'  (46)
	declare_function : ID '(' . ')' '{' program_in_func '}'  (47)
	declare_function : ID '(' . paras ')' '{' program_in_func '}'  (48)

	TYPE_INT  shift 2
	TYPE_DOUBLE  shift 3
	TYPE_CHAR  shift 4
	TYPE_BOOL  shift 5
	')'  shift 80
	.  error

	type  goto 81
	paras  goto 82
	para  goto 83


state 54
	array : ID arr_state_index .  (57)
	array : ID arr_state_index . '=' '{' arr_content '}'  (58)
	array : ID arr_state_index . '=' '{' '}'  (59)

	'='  shift 84
	';'  reduce 57
	','  reduce 57


state 55
	scalar : scalar_id '=' . expr  (55)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 85
	val  goto 47


state 56
	declare : type declare_ID ';' .  (31)

	.  reduce 31


state 57
	declare_ID : scalar ',' . declare_ID  (39)

	ID  shift 86
	.  error

	scalar_id  goto 24
	declare_ID  goto 87
	scalar  goto 27
	array  goto 28


state 58
	declare_ID : array ',' . declare_ID  (40)

	ID  shift 86
	.  error

	scalar_id  goto 24
	declare_ID  goto 88
	scalar  goto 27
	array  goto 28


state 59
	declare_const : ID '=' . expr  (41)
	declare_const : ID '=' . expr ',' declare_const  (42)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 89
	val  goto 47


state 60
	declare : KEY_CONST type declare_const ';' .  (32)

	.  reduce 32


state 61
	expr : ID OPER_PP .  (118)

	.  reduce 118


state 62
	expr : ID OPER_SS .  (119)

	.  reduce 119


state 63
	expr : ID '(' . ')'  (132)
	expr : ID '(' . exprs ')'  (133)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	')'  shift 90
	.  error

	var  goto 45
	expr  goto 49
	exprs  goto 91
	val  goto 47


state 64
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : '!' expr .  (127)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)

	OPER_CMP  shift 69
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	OPER_AA  reduce 127
	OPER_OO  reduce 127
	']'  reduce 127
	';'  reduce 127
	','  reduce 127
	')'  reduce 127
	'}'  reduce 127


state 65
	expr : '-' expr .  (120)
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)

	.  reduce 120


state 66
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)
	expr : '(' expr . ')'  (130)

	OPER_AA  shift 67
	OPER_OO  shift 68
	OPER_CMP  shift 69
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	')'  shift 92
	.  error


state 67
	expr : expr OPER_AA . expr  (128)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 93
	val  goto 47


state 68
	expr : expr OPER_OO . expr  (129)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 94
	val  goto 47


state 69
	expr : expr OPER_CMP . expr  (126)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 95
	val  goto 47


state 70
	expr : expr '+' . expr  (124)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 96
	val  goto 47


state 71
	expr : expr '-' . expr  (125)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 97
	val  goto 47


state 72
	expr : expr '*' . expr  (121)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 98
	val  goto 47


state 73
	expr : expr '/' . expr  (122)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 99
	val  goto 47


state 74
	expr : expr '%' . expr  (123)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 100
	val  goto 47


state 75
	arr_expr_index : '[' expr ']' .  (142)
	arr_expr_index : '[' expr ']' . arr_expr_index  (143)

	'['  shift 17
	OPER_AA  reduce 142
	OPER_OO  reduce 142
	OPER_CMP  reduce 142
	'+'  reduce 142
	'-'  reduce 142
	'*'  reduce 142
	'/'  reduce 142
	'%'  reduce 142
	']'  reduce 142
	';'  reduce 142
	','  reduce 142
	'='  reduce 142
	')'  reduce 142
	'}'  reduce 142

	arr_expr_index  goto 101


state 76
	exprs : expr ',' . exprs  (116)

	KEY_NULL  shift 33
	KEY_TRUE  shift 34
	KEY_FALSE  shift 35
	SCI  shift 36
	DOUBLE  shift 37
	CHAR  shift 38
	STR  shift 39
	INT  shift 40
	ID  shift 41
	'!'  shift 42
	'-'  shift 43
	'('  shift 44
	.  error

	var  goto 45
	expr  goto 49
	exprs  goto 102
	val  goto 47


state 77
	func_invocation : ID '(' exprs ')' .  (145)

	.  reduce 145


state 78
	simple_statement : var '=' expr ';' .  (69)

	.  reduce 69


state 79
	arr_state_index : '[' INT . ']'  (60)
	arr_state_index : '[' INT . ']' arr_state_index  (61)

	']'  shift 103
	.  error


state 80
	declare_function : ID '(' ')' . ';'  (43)
	declare_function : ID '(' ')' . '{' '}'  (45)
	declare_function : ID '(' ')' . '{' program_in_func '}'  (47)

	';'  shift 104
	'{'  shift 105
	.  error


state 81
	para : type . ID  (65)
	para : type . ID arr_state_index  (66)

	ID  shift 106
	.  error


state 82
	declare_function : ID '(' paras . ')' ';'  (44)
	declare_function : ID '(' paras . ')' '{' '}'  (46)
	declare_function : ID '(' paras . ')' '{' program_in_func '}'  (48)

	')'  shift 107
	.  error


state 83
	paras : para .  (63)
	paras : para . ',' paras  (64)

	','  shift 108
	')'  reduce 63


state 84
	array : ID arr_state_index '=' . '{' arr_content '}'  (58)
	array : ID arr_state_index '=' . '{' '}'  (59)

	'{'  shift 109
	.  error


state 85
	scalar : scalar_id '=' expr .  (55)
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)

	OPER_AA  shift 67
	OPER_OO  shift 68
	OPER_CMP  shift 69
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	';'  reduce 55
	','  reduce 55


state 86
	scalar_id : ID .  (56)
	array : ID . arr_state_index  (57)
	array : ID . arr_state_index '=' '{' arr_content '}'  (58)
	array : ID . arr_state_index '=' '{' '}'  (59)

	'['  shift 52
	';'  reduce 56
	','  reduce 56
	'='  reduce 56

	arr_state_index  goto 54


state 87
	declare_ID : scalar ',' declare_ID .  (39)

	.  reduce 39


state 88
	declare_ID : array ',' declare_ID .  (40)

	.  reduce 40


state 89
	declare_const : ID '=' expr .  (41)
	declare_const : ID '=' expr . ',' declare_const  (42)
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)

	OPER_AA  shift 67
	OPER_OO  shift 68
	OPER_CMP  shift 69
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	','  shift 110
	';'  reduce 41


state 90
	expr : ID '(' ')' .  (132)

	.  reduce 132


state 91
	expr : ID '(' exprs . ')'  (133)

	')'  shift 111
	.  error


state 92
	expr : '(' expr ')' .  (130)

	.  reduce 130


state 93
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr OPER_AA expr .  (128)
	expr : expr . OPER_OO expr  (129)

	OPER_CMP  shift 69
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	OPER_AA  reduce 128
	OPER_OO  reduce 128
	']'  reduce 128
	';'  reduce 128
	','  reduce 128
	')'  reduce 128
	'}'  reduce 128


state 94
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)
	expr : expr OPER_OO expr .  (129)

	OPER_AA  shift 67
	OPER_CMP  shift 69
	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	OPER_OO  reduce 129
	']'  reduce 129
	';'  reduce 129
	','  reduce 129
	')'  reduce 129
	'}'  reduce 129


state 95
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr OPER_CMP expr .  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)

	'+'  shift 70
	'-'  shift 71
	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	OPER_AA  reduce 126
	OPER_OO  reduce 126
	OPER_CMP  reduce 126
	']'  reduce 126
	';'  reduce 126
	','  reduce 126
	')'  reduce 126
	'}'  reduce 126


state 96
	expr : expr . '*' expr  (121)
	expr : expr . '/' expr  (122)
	expr : expr . '%' expr  (123)
	expr : expr . '+' expr  (124)
	expr : expr '+' expr .  (124)
	expr : expr . '-' expr  (125)
	expr : expr . OPER_CMP expr  (126)
	expr : expr . OPER_AA expr  (128)
	expr : expr . OPER_OO expr  (129)

	'*'  shift 72
	'/'  shift 73
	'%'  shift 74
	OPER_AA  reduce 124
	OPER_OO  reduce 124
	OPER_CMP  reduce 124
	'+'  reduce 124
	'-'  reduce 124
	']'  reduce 124
	';'  reduce 124
	','  reduce 124
	')'  reduce 124
	'}'  reduce 124

